# grammar-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: benchmark_comparison.py  demo_articles.py  demo_jsonrpc.py  demo_person.py
grammar_guard/: __init__.py  api.py  generator.py
grammar_guard/backends/: __init__.py  base.py  device_utils.py  llamacpp_backend.py  transformers_backend.py
grammar_guard/cli/: __init__.py  commands.py  display.py  main.py
grammar_guard/decoding/: __init__.py  cache.py  fsm_builder.py  logits_processor.py  state_tracker.py  token_index.py
grammar_guard/schema/: __init__.py  parser.py  pydantic_adapter.py  regex_compiler.py  simplifier.py  types.py
grammar_guard/utils/: __init__.py
grammar_guard/validation/: __init__.py  diff_generator.py  error_formatter.py  validator.py
tests/: __init__.py
tests/benchmarks/: __init__.py
tests/e2e/: __init__.py  test_articles_list.py  test_jsonrpc.py  test_person_record.py
tests/fixtures/prompts/: prompts.json
tests/fixtures/schemas/: articles.json  jsonrpc.json  person.json
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_regex_compiler.py  test_schema_parser.py  test_validator.py
